structmeta-tests/tests/compile_fail/struct_meta/expected_name_args_buf_flag.rs
#[structmeta_tests::attr_name_args(value)]
fn my_func() {}

fn main() {}
