structmeta-tests/tests/compile_fail/struct_meta/expected_name_args_buf_flag.stderr
error[E0433]: failed to resolve: could not find `attr_name_args` in `structmeta_tests`
 --> $DIR/expected_name_args_buf_flag.rs:1:21
  |
1 | #[structmeta_tests::attr_name_args(value)]
  |                     ^^^^^^^^^^^^^^ could not find `attr_name_args` in `structmeta_tests`
